# Boron

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  ROADMAP.md  SMake.toml  build.sh  roadmap.md
docs/: ROADMAP.md  grammar.md  tokens.md
inc/: args.hpp  codegen.hpp  error.hpp  lexer.hpp
inc/boronc/: codegen.h  error.h  lexer.h  parser.h
src/: args.cpp  codegen.cpp  error.cpp  lexer.cpp  main.cpp
src/boron/: args.nim  main.nim
src/boronc/: codgen.c  error.c  lexer.c  main.c  parser.c
